устранены замечания ревью от 2025-01-08